Z-index fix re: https://github.com/silviomoreto/bootstrap-select/issues/760

--- a/app/assets/stylesheets/_cerberus.css.scss
+++ b/app/assets/stylesheets/_cerberus.css.scss
@@ -8,6 +8,9 @@
   label {
     font-weight: normal;
   }
+  .input-group .form-control .selectpicker {
+    z-index: auto;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
